# tomato

./: README.md  io.github.lorencinibrdev.Tomato.json  meson.build
data/: io.github.lorencinibrdev.Tomato.appdata.xml.in  io.github.lorencinibrdev.Tomato.desktop.in  io.github.lorencinibrdev.Tomato.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  tomato.gresource.xml  window.ui  window.vala
